--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
 h1{
     text-align: center;
     color: yellow;
+    text-decoration: underline;
     background-color: black;
     margin: 20px 50px;
 }
